# tlean

./: readme.md  sample_previous_4_messages.json
backend/: .env.example  .gitignore  GITHUB_API.md  README.md  SLACK_SETUP_GUIDE.md  enable_detailed_llm_logging.py  example_usage.py  github.py  github_candidate_generator.py  guidelines.md  main.py  pyproject.toml  result.json  sample_github_response.json  test_combined_endpoint.py  test_common_format.py  test_default_username.py  test_direct_calls.py  test_simplified_api.py  test_slack.py
backend/common/: __init__.py  models.py
backend/github/: README.md  __init__.py  diff_analyzer.py  example_usage.py  final_github_candidates.json  formatting_demo.py  generate_json_data.py  github_candidate_generator.py  github_processor_demo.py  github_router.py  implementation_summary.md  integration_test.py  planning_document.md  pr_processor.py  result.json  scoring_algorithm.md  simple_json_generator.py  test_processor.py  user_prs_simple.json
backend/jira_integration/: README_JSON_OUTPUT.md  __init__.py  example_json_usage.py  jira-main.py  jira_json_cli.py  jira_output.json  jira_router.py  sample.json  test_json_output.py
backend/llm_interactions/: basic_endpoint_test.py  generateConversationSummarySlack.py  testGptResponse.py
backend/slack/: README.md  __init__.py  curl_workflow_example.py  endpoints.py  exceptions.py  llm_analyzer.py  logging_example.py  message_filter.py  models.py  sample_messages.json  sample_next_4_messages.json  sample_replies.json  slack.py  slack_curls.txt  test_analyzed_messages.py  test_api.py  (+1 more)
(+1 files in other folders)
