[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "openai>=1.107.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
    "jira>=3.8.0",
    "atlassian-python-api"
]
